--- a/android/robot/build.gradle
+++ b/android/robot/build.gradle
@@ -15,12 +15,12 @@ apply plugin: 'de.undercouch.download'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
     buildToolsVersion '33.0.1'
     defaultConfig {
         applicationId "org.openbot"
-        minSdkVersion 21
-        targetSdkVersion 32
+        minSdkVersion 33
+        targetSdkVersion 33
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
