--- a/android/controller/build.gradle
+++ b/android/controller/build.gradle
@@ -15,19 +15,16 @@ appVersioning {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
     buildToolsVersion "33.0.1"
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 32
-
+        minSdkVersion 33
+        targetSdkVersion 33
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        defaultConfig {
-            ndk {
-                abiFilters 'armeabi-v7a', 'arm64-v8a'
-            }
+        ndk {
+            abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
+//                abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
     }
 
