--- a/android/robot/build.gradle
+++ b/android/robot/build.gradle
@@ -18,11 +18,12 @@ android {
     compileSdk 33
     buildToolsVersion '33.0.1'
     defaultConfig {
-        applicationId "org.openbot"
+        applicationId "com.annikken"
         minSdkVersion 33
         targetSdkVersion 33
         ndk {
-            abiFilters 'armeabi-v7a', 'arm64-v8a'
+            abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
+//            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
     }
     buildTypes {
