--- a/android/controller/build.gradle
+++ b/android/controller/build.gradle
@@ -15,12 +15,12 @@ appVersioning {
 }
 
 android {
-    compileSdk 33
-    buildToolsVersion "33.0.1"
+    compileSdk 34
+    buildToolsVersion "34.0.0"
 
     defaultConfig {
-        minSdkVersion 33
-        targetSdkVersion 33
+        minSdkVersion 34
+        targetSdkVersion 34
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         ndk {
             abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
@@ -55,7 +55,7 @@ android {
         }
     }
 
-    namespace 'org.openbot.controller'
+    namespace 'com.andee_openbot.controller'
 }
 
 dependencies {
