--- a/android/controller/src/main/AndroidManifest.xml
+++ b/android/controller/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
         <activity
             android:screenOrientation="landscape"
-            android:name="org.openbot.controller.ControllerActivity"
+            android:name="com.andee_ai_openbot.controller.ControllerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"
