--- a/android/robot/src/main/AndroidManifest.xml
+++ b/android/robot/src/main/AndroidManifest.xml
@@ -40,11 +40,11 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@drawable/ic_openbot"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:name="com.andee_ai_openbot.OpenBotApplication"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@drawable/ic_openbot"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
